--- a/style.css
+++ b/style.css
@@ -3,12 +3,12 @@ body {
     margin: 0;
     font-family: Arial, sans-serif;
     background-color: #f4f8fc;
-    color: #333;
+    color: #fff;
 }
 
 /* Header */
 .header {
-    background-color: #5a9bd3; /* Dark sky blue */
+    background-color: #68b2ff; /* Dark sky blue */
     color: #fff;
     padding: 1rem;
     display: flex;
