--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@ body {
     margin: 0;
     font-family: Arial, sans-serif;
     background-color: #f4f8fc;
-    color: #fff;
+    color: #333;
 }
 
 /* Header */
