--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,12 @@ body {
     align-items: center;
 }
 
+.logo-img {
+    width: 40px; 
+    height: 40px; 
+    margin-right: 10px; 
+}
+
 .logo {
     font-size: 1.5rem;
     font-weight: bold;
