--- a/styles.css
+++ b/styles.css
@@ -229,7 +229,8 @@ body {
 
 .profile-header {
     display: flex;
-    align-items: flex-start;
+    flex-direction: column;
+    align-items: center;
     border-bottom: 1px solid #ddd;
     padding-bottom: 20px;
     margin-bottom: 20px;
@@ -238,27 +239,35 @@ body {
 .profile-image {
     width: 120px;
     height: 120px;
+    object-fit: cover;
     border-radius: 50%;
     background-color: #ddd;
-    margin-right: 20px;
+}
+
+.profile-info {
+    text-align: center;
 }
 
 .profile-info h1 {
-    margin: 0;
+    margin-top: 25px;
     font-size: 1.8rem;
     color: #333;
 }
 
 .profile-info p {
-    margin: 5px 0;
     font-size: 1rem;
     color: #666;
+}
+
+.additional-info {
+    text-align: center;
 }
 
 .additional-info h2 {
     font-size: 1.5rem;
     color: #333;
-    margin-bottom: 10px;
+    margin-top: 30px;
+    margin-bottom: 20px;
 }
 
 .additional-info p {
