--- a/styles.css
+++ b/styles.css
@@ -20,6 +20,7 @@ body {
     width: 40px;
     height: 40px;
     margin-right: 10px;
+    margin-bottom: 5px;
 }
 
 .logo {
@@ -27,6 +28,7 @@ body {
     font-weight: bold;
     display: flex;
     gap: 20px;
+    color: #fff;
 }
 
 .nav {
@@ -72,10 +74,15 @@ body {
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     transition: transform 0.2s;
     text-decoration: none;
+    cursor: pointer;
 }
 
 .restaurant-card:hover {
     transform: scale(1.05);
+}
+
+.restaurant-card:visited {
+    color:#000;
 }
 
 /* Menu Page */
@@ -104,6 +111,17 @@ body {
     padding: 10px;
     border: 1px solid #ddd;
     margin-bottom: 10px;
+    cursor: pointer;
+}
+
+.menu-item:hover {
+    background-color: #f1f1f1;
+    transform: scale(1.02);
+}
+
+.menu-item-click {
+    background-color: #f1f1f1;
+    transform: scale(1.02);
 }
 
 .menu-item .item-name {
@@ -123,14 +141,15 @@ body {
     color: #333; /* A green color for the price */
 }
 
-/* Add hover effect */
-.menu-item:hover {
-    background-color: #f1f1f1;
-    transform: scale(1.02);
+.add-to-cart-section a {
+    text-decoration: none;
 }
 
-/* Cart Styles */
-.add-to-cart-section {
+.add-to-cart-section a:visited {
+    color: #000;
+}
+
+.add-to-cart-button {
     text-align: center;
     background-color: #fff;
     border: 1px solid #ddd;
@@ -138,7 +157,14 @@ body {
     padding: 1rem;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     text-decoration: none;
+    cursor: pointer;
 }
+
+.add-to-cart-button:hover {
+    background-color: #f1f1f1;
+}
+
+/* Cart Styles */
 
 .cart-section {
     padding: 1rem;
@@ -149,17 +175,24 @@ body {
 }
 
 .cart-item {
-    margin-left: 15px;;
+    max-width: 800px;
+    margin: 20px auto;
+    background: #fff;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    border-radius: 10px;
+    padding: 20px;
 }
 
 .item-details li {
     padding: 5px;
 }
 
-/* Add hover effect */
-.add-to-cart-section:hover {
-    background-color: #f1f1f1;
-    transform: scale(1.02);
+.confirm-order-section a {
+    text-decoration: none;
+}
+
+.confirm-order-section a:visited {
+    color: #000;
 }
 
 .confirm-order {
@@ -175,7 +208,6 @@ body {
 /* Add hover effect */
 .confirm-order:hover {
     background-color: #f1f1f1;
-    transform: scale(1.02);
 }
 
 /* Orders Styles */
@@ -187,18 +219,25 @@ body {
 }
 
 .active-order {
-    margin-left: 15px;
+    max-width: 800px;
+    margin: 20px auto;
+    background: #fff;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    border-radius: 10px;
+    padding: 20px;
 }
 
 .order-status {
     display: flex;
     justify-content: space-between;
-    margin-bottom: 30px;
+    border-bottom: 1px solid #ddd;
+    padding-bottom: 15px;
 }
 
 .order-details {
     justify-self: center;
     margin-left: 75px;
+    padding-top: 15px;
 }
 
 .order-details strong {
@@ -210,10 +249,14 @@ body {
 }
 
 .past-order {
-    margin-left: 15px;
-    padding-bottom: 15px;
     display: flex;
     justify-content: space-between;
+    max-width: 800px;
+    margin: 20px auto;
+    background: #fff;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    border-radius: 10px;
+    padding: 20px;
 }
 
 /* Profile Styles */
@@ -221,7 +264,7 @@ body {
 .profile-container {
     max-width: 800px;
     margin: 20px auto;
-    background: #ffffff;
+    background: #fff;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     border-radius: 10px;
     padding: 20px;
