Made some style changes

--- a/styles.css
+++ b/styles.css
@@ -53,7 +53,10 @@ body {
 
 /* Main Content */
 .main-content {
-    padding: 2rem;
+    padding-top: 2rem;
+    padding-left: 2rem;
+    padding-right: 2rem;
+    min-height: 73vh;
 }
 
 .restaurants-section {
@@ -90,7 +93,9 @@ body {
 }
 
 .restaurant-card h3 {
-    margin: 0;
+    text-align: center;
+    padding: 3;
+    margin-top: 15%;
     font-size: 1.2rem;
     color: #333;
 }
@@ -340,6 +345,8 @@ body {
 
 /* Footer */
 .footer {
+    position: absolute;
+    width: 100vw;
     background-color: #5a9bd3; /* Dark sky blue */
     color: #fff;
     text-align: center;
